--- a/intro/mqtt/solution/cfg.toml.example
+++ b/intro/mqtt/solution/cfg.toml.example
@@ -1,7 +1,6 @@
-[mqtt-mcu]
+[mqtt]
 mqtt_user = "horse"
 mqtt_pass = "CorrectHorseBatteryStaple"
 mqtt_host = "yourpc.local"
 wifi_ssid = "FBI Surveillance Van"
-wifi_psk = "hunter 2"
-# uuid = will be generated for you by `build.rs`
+wifi_psk = "hunter2"
