--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -18,7 +18,8 @@ native = ["esp-idf-sys/native"]
 
 [dependencies]
 esp-idf-sys = { version = "=0.30.4", features = ["binstart"] }
-esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
+esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }cd ..
+mv 
 log = "0.4"
 anyhow = "1"
 toml-cfg = "0.1"
