--- a/intro/http-server/exercise/Cargo.toml
+++ b/intro/http-server/exercise/Cargo.toml
@@ -18,6 +18,7 @@ native = ["esp-idf-sys/native"]
 
 [dependencies]
 esp-idf-sys = { version = "=0.30.4", features = ["binstart"] }
+esp-idf-svc = "=0.36.7"
 esp32-c3-dkc02-bsc = { path = "../../../common/lib/esp32-c3-dkc02-bsc" }
 esp32c3 = "=0.3.0"
 embedded-svc = "=0.16.5"
