--- a/advanced/i2c-driver-exercise/Cargo.toml
+++ b/advanced/i2c-driver-exercise/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "i2c-sensor-exercise"
+name = "i2c-driver-exercise"
 version = "0.1.0"
 authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
 edition = "2021"
