--- a/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
+++ b/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
@@ -17,3 +17,6 @@ log = "0.4"
 anyhow = "1"
 toml-cfg = "0.1"
 riscv = { version = "0.7", features=["inline-asm"] }
+
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
