--- a/intro/mqtt/solution/Cargo.toml
+++ b/intro/mqtt/solution/Cargo.toml
@@ -33,3 +33,6 @@ mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
 [build-dependencies]
 embuild = "0.28"
 anyhow = "1"
+
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
