--- a/advanced/i2c-sensor-reading/solution/Cargo.toml
+++ b/advanced/i2c-sensor-reading/solution/Cargo.toml
@@ -31,3 +31,6 @@ imc42670p = { path = "../../../common/lib/imc42670p" }
 [build-dependencies]
 embuild = "0.28"
 anyhow = "1"
+
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
