--- a/common/lib/imc42670p/Cargo.toml
+++ b/common/lib/imc42670p/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2021"
 [dependencies]
 embedded-hal = "0.2.7"
 
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
