--- a/intro/http-server/solution/Cargo.toml
+++ b/intro/http-server/solution/Cargo.toml
@@ -28,3 +28,6 @@ toml-cfg = "0.1"
 [build-dependencies]
 embuild = "0.28"
 anyhow = "1"
+
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
