--- a/intro/mqtt/host-client/Cargo.toml
+++ b/intro/mqtt/host-client/Cargo.toml
@@ -11,3 +11,6 @@ rand = "0.8.4"
 toml-cfg = "0.1"
 get-uuid = { path = "../../../common/lib/get-uuid" }
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
+
+[patch.crates-io]
+riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
