Test before task

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image: sergiogasquez/esp-rs-env:esp32c3-training
 
 tasks:
   - name: Adopt environment in the container image to gitpod user
-    init: |
+    before: |
       ln -s /home/vscode/.rustup /home/gitpod/.rustup
       mkdir /home/.gitpod/.cargo
       ln -s /home/vscode/.cargo/bin /home/gitpod/.cargo/bin
