--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
   - name: Adopt environment in the container image to gitpod user
     command: |
       ln -s /home/vscode/.rustup /home/gitpod/.rustup
-      mkdir /home/.gitpod/.cargo
+      # mkdir /home/gitpod/.cargo
       ln -s /home/vscode/.cargo/bin /home/gitpod/.cargo/bin
       ln -s /home/vscode/.cargo/env /home/gitpod/.cargo/env
       source /home/gitpod/.cargo/env
