--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,11 +2,12 @@ image: sergiogasquez/esp-rs-env:esp32c3-training
 
 tasks:
   - name: Adopt environment in the container image to gitpod user
-    command: |
+    init: |
       ln -s /home/vscode/.rustup /home/gitpod/.rustup
-      # mkdir /home/gitpod/.cargo
+      mkdir /home/gitpod/.cargo
       ln -s /home/vscode/.cargo/bin /home/gitpod/.cargo/bin
       ln -s /home/vscode/.cargo/env /home/gitpod/.cargo/env
+    command: |
       source /home/gitpod/.cargo/env
       source /home/vscode/export-rust.sh
 vscode:
