Test gitpod integration with wokwi

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,3 +15,6 @@ vscode:
     - vadimcn.vscode-lldb
     - anwar.resourcemonitor
     - yzhang.markdown-all-in-one
+ports:
+  - port: 9012
+    onOpen: open-preview
