Open Wokwi port

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,5 +15,5 @@ vscode:
     - vadimcn.vscode-lldb
     - anwar.resourcemonitor
     - yzhang.markdown-all-in-one
-# ports:
-  # - port: 9012
+ports:
+  - port: 9012
