Fix cargo-espflash version

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,7 +16,8 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- \
 ENV PATH=${PATH}:$HOME/.cargo/bin:$HOME/.cargo/bin
 RUN $HOME/.cargo/bin/rustup component add rust-src --toolchain nightly-2022-03-10
 RUN $HOME/.cargo/bin/rustup target add riscv32i-unknown-none-elf
-RUN $HOME/.cargo/bin/cargo install cargo-generate cargo-espflash espmonitor bindgen ldproxy
+RUN $HOME/.cargo/bin/cargo install cargo-generate espmonitor bindgen ldproxy
+RUN $HOME/.cargo/bin/cargo install cargo-espflash --version 1.4.0
 ENV ESP_IDF_TOOLS_INSTALL_DIR=global
 ENV ESP_BOARD=esp32c3
 ENV ESP_IDF_VER=v4.4
