Update container user, tasks and documentation

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update \
     python3 python3-pip libusb-1.0-0 libssl-dev pkg-config libtinfo5 clang \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 RUN pip3 install websockets==10.2
-ARG CONTAINER_USER=gitpod
+ARG CONTAINER_USER=esp
+ENV USER=${CONTAINER_USER}
 RUN adduser --disabled-password --gecos "" ${CONTAINER_USER}
 USER ${CONTAINER_USER}
 WORKDIR /home/${CONTAINER_USER}
@@ -27,39 +28,40 @@ RUN git clone --recursive --depth 1 --shallow-submodules -b ${ESP_IDF_BRANCH} \
     https://github.com/espressif/esp-idf.git $HOME/esp-idf
 RUN $HOME/esp-idf/install.sh ${ESP_BOARD}
 ENV IDF_PATH=$HOME/esp-idf
-RUN git clone https://github.com/ferrous-systems/espressif-trainings.git && \
-    # Hardware Check
-    cd $HOME/espressif-trainings/intro/hardware-check && \
-    $HOME/.cargo/bin/cargo fetch && \
-    $HOME/.cargo/bin/cargo build && \
-    $HOME/.cargo/bin/cargo clean && \
-    # Http Client
-    cd $HOME/espressif-trainings/intro/http-client/exercise && \
-    $HOME/.cargo/bin/cargo fetch && \
-    cd $HOME/espressif-trainings/intro/http-client/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    # Http Server
-    cd $HOME/espressif-trainings/intro/http-server/exercise && \
-    $HOME/.cargo/bin/cargo fetch && \
-    cd $HOME/espressif-trainings/intro/http-server/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    # MQTT
-    cd $HOME/espressif-trainings/intro/mqtt/exercise && \
-    $HOME/.cargo/bin/cargo fetch && \
-    cd $HOME/espressif-trainings/intro/mqtt/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    cd $HOME/espressif-trainings/intro/mqtt/host-client && \
-    $HOME/.cargo/bin/cargo fetch && \
-     # Button Interrupt
-    cd $HOME/espressif-trainings/advanced/button-interrupt/exercise && \
-    $HOME/.cargo/bin/cargo fetch && \
-    cd $HOME/espressif-trainings/advanced/button-interrupt/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    # I2C Driver
-    cd $HOME/espressif-trainings/advanced/i2c-driver/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    # I2C Sensor Reading
-    cd $HOME/espressif-trainings/advanced/i2c-sensor-reading/solution && \
-    $HOME/.cargo/bin/cargo fetch && \
-    # Delete the repository
-    rm -rf $HOME/espressif-trainings
+# In order to have dependencies pre-fecthed please, uncoment this section:
+# RUN git clone https://github.com/ferrous-systems/espressif-trainings.git && \
+#     # Hardware Check
+#     cd $HOME/espressif-trainings/intro/hardware-check && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     $HOME/.cargo/bin/cargo build && \
+#     $HOME/.cargo/bin/cargo clean && \
+#     # Http Client
+#     cd $HOME/espressif-trainings/intro/http-client/exercise && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     cd $HOME/espressif-trainings/intro/http-client/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     # Http Server
+#     cd $HOME/espressif-trainings/intro/http-server/exercise && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     cd $HOME/espressif-trainings/intro/http-server/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     # MQTT
+#     cd $HOME/espressif-trainings/intro/mqtt/exercise && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     cd $HOME/espressif-trainings/intro/mqtt/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     cd $HOME/espressif-trainings/intro/mqtt/host-client && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#      # Button Interrupt
+#     cd $HOME/espressif-trainings/advanced/button-interrupt/exercise && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     cd $HOME/espressif-trainings/advanced/button-interrupt/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     # I2C Driver
+#     cd $HOME/espressif-trainings/advanced/i2c-driver/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     # I2C Sensor Reading
+#     cd $HOME/espressif-trainings/advanced/i2c-sensor-reading/solution && \
+#     $HOME/.cargo/bin/cargo fetch && \
+#     # Delete the repository
+#     rm -rf $HOME/espressif-trainings
