Use rev option to set fixed commit hash
This change sets a fixed commit revision to the `riscv` patch annotation
in all `Cargo.toml` files.

Using `master` as a `branch` option results in different commit hashes at different times, depending on changes in the `riscv` crate. This crate has seen some changes in the last days / weeks that broke the current setup, therefore a working revision is set.

--- a/advanced/i2c-driver/solution/Cargo.toml
+++ b/advanced/i2c-driver/solution/Cargo.toml
@@ -28,4 +28,4 @@ embuild = "0.28"
 anyhow = "1"
 
 [patch.crates-io]
-riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
+riscv = { git = "https://github.com/rust-embedded/riscv", rev = "396fb9b"}
