--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -28,4 +28,4 @@ embuild = "0.28"
 anyhow = "1"
 
 [patch.crates-io]
-riscv = { git = "https://github.com/rust-embedded/riscv", branch = "master"}
+riscv = { git = "https://github.com/rust-embedded/riscv", rev = "396fb9b"}
