Reduce size of Docker image
* split commands to install Rust and use cargo
* install Rust with minimal profile
* use `slim` base image
* remove installation from a few packages

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,23 +1,29 @@
-FROM debian:bullseye
+FROM debian:bullseye-slim
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 ARG CONTAINER_USER=esp
 ARG CONTAINER_GROUP=esp
 ARG NIGHTLY_VERSION=nightly-2022-03-10
+
 RUN apt-get update \
-    && apt-get install -y vim nano git curl gcc ninja-build cmake libudev-dev \
-    python3 python3-pip libusb-1.0-0 libssl-dev pkg-config libtinfo5 clang \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
+    && apt-get install -y git curl ninja-build clang libudev-dev \
+    python3 python3-pip libusb-1.0-0 libssl-dev pkg-config libtinfo5 \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
+
 RUN adduser --disabled-password --gecos "" ${CONTAINER_USER}
 USER ${CONTAINER_USER}
 WORKDIR /home/${CONTAINER_USER}
 ENV PATH=${PATH}:$HOME/.cargo/bin
+
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- \
-    --default-toolchain ${NIGHTLY_VERSION} -y \
+    --default-toolchain ${NIGHTLY_VERSION} -y --profile minimal \
     && $HOME/.cargo/bin/rustup component add rust-src --toolchain ${NIGHTLY_VERSION} \
-    && $HOME/.cargo/bin/rustup target add riscv32i-unknown-none-elf \
-    && $HOME/.cargo/bin/cargo install cargo-generate cargo-espflash espmonitor bindgen ldproxy
+    && $HOME/.cargo/bin/rustup target add riscv32i-unknown-none-elf
+
+RUN $HOME/.cargo/bin/cargo install cargo-generate cargo-espflash espmonitor bindgen ldproxy
+
 ENV ESP_BOARD=esp32c3
 ENV ESP_IDF_VERSION=release/v4.4
 RUN mkdir -p .espressif/frameworks/ \
@@ -27,4 +33,5 @@ RUN mkdir -p .espressif/frameworks/ \
     && .espressif/frameworks/esp-idf-v4.4/install.sh ${ESP_BOARD} \
     && rm -rf .espressif/dist \
     && rm -rf .espressif/frameworks/esp-idf-v4.4/docs
+
 CMD "/bin/bash"
