--- a/common/lib/esp32-c3-dkc02-bsc/.cargo/config.toml
+++ b/common/lib/esp32-c3-dkc02-bsc/.cargo/config.toml
@@ -28,9 +28,9 @@ build-std-features = ["panic_immediate_abort"]
 
 [env]
 # Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF upcoming (v4.4)
-ESP_IDF_VERSION = { value = "branch:release/v4.4" }
+# ESP_IDF_VERSION = { value = "branch:release/v4.4" }
 # Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF master (v5.0)
-#ESP_IDF_VERSION = { value = "master" }
+ESP_IDF_VERSION = { value = "master" }
 
 # These configurations will pick up your custom "sdkconfig.release", "sdkconfig.debug" or "sdkconfig.defaults[.*]" files
 # that you might put in the root of the project
