--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,9 @@
 image:
   file: .gitpod.Dockerfile
+tasks:
+ - name: Setup environment variables for ESP-IDF
+   command: |
+     source /home/gitpod/.espressif/frameworks/esp-idf-v4.4/export.sh
 vscode:
   extensions:
     - matklad.rust-analyzer
