--- a/intro/mqtt/host-client/cfg.toml.example
+++ b/intro/mqtt/host-client/cfg.toml.example
@@ -2,3 +2,10 @@
 mqtt_user = "horse"
 mqtt_pass = "CorrectHorseBatteryStaple"
 mqtt_host = "yourpc.local"
+
+# If you're participating in a Ferrous Systems training, 
+# login credentials for a server operated by Espressif 
+# will be made available in the workshop.
+
+# If you are working on your own you could use one listed at https://test.mosquitto.org/,
+# e.g. the simplest way is to just place `mqtt_host = "test.mosquitto.org"` (and remove the other keys).
