Fix Docker command to remove TTY
Github Actions do not support a shell using TTY, therefore this option
is removed from the shell command.

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,5 +1,5 @@
 ---
-name: Build Docker Image
+name: Docker Image
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
   # the image is built here & immediately used to test all exercises in.
   # TODO at a later point split that into separate jobs
   build_image_and_test:
-    name: Build & test Docker image
+    name: Build & test image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -26,4 +26,4 @@ jobs:
       - name: Test code examples in Docker image
         run: |
           docker run --user esp --mount type=bind,source="$(pwd)",target=/home/esp/workspace,consistency=cached \
-                 --rm -it esp:latest /bin/bash /home/esp/workspace/.devcontainer/test.sh
+                 --rm -i esp:latest /bin/bash /home/esp/workspace/.devcontainer/test.sh
