--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
   "build": {
     "dockerfile": "Dockerfile",
     "args": {
-      "NIGHTLY_VERSION": "nightly-2022-03-10",
-      "CONTAINER_USER": "root"
+      "NIGHTLY_VERSION": "nightly-2022-03-10"
     }
   },
   "settings": {
@@ -18,7 +17,7 @@
     },
     "rust-analyzer.checkOnSave.command": "clippy",
     "[rust]": {
-      "editor.defaultFormatter": "rust-lang.rust"
+      "editor.defaultFormatter": "rust-lang.rust-analyzer"
     }
   },
   "extensions": [
@@ -29,6 +28,7 @@
     "mutantdino.resourcemonitor",
     "yzhang.markdown-all-in-one"
   ],
+  "remoteUser": "root",
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
   "workspaceFolder": "/workspace"
 }
