--- a/common/lib/esp32-c3-dkc02-bsc/.cargo/config.toml
+++ b/common/lib/esp32-c3-dkc02-bsc/.cargo/config.toml
@@ -28,7 +28,7 @@ build-std-features = ["panic_immediate_abort"]
 
 [env]
 # Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF upcoming (v4.4)
-ESP_IDF_VERSION = { value = "branch:release/v4.4" }
+ESP_IDF_VERSION = { value = "tag:v4.4.1" }
 # Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF master (v5.0)
 #ESP_IDF_VERSION = { value = "master" }
 
