--- a/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
+++ b/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "esp32-c3-dkc02-bsc"
 version = "0.1.0"
@@ -7,16 +8,13 @@ edition = "2021"
 
 
 [dependencies]
-esp32c3 = "=0.3.0"
+esp32c3 = "=0.4"
 esp-idf-sys = { version = "=0.31.5" }
-esp-idf-svc = { version="=0.39.1", features = ["experimental", "alloc"] }
-esp-idf-hal = "=0.35.1"
-embedded-svc = "=0.19"
+esp-idf-svc = { version= "=0.42.1", features = ["experimental", "alloc"] }
+esp-idf-hal = "=0.38"
+embedded-svc = "=0.22"
 rgb = "0.8"
 log = "0.4"
 anyhow = "1"
 toml-cfg = "0.1"
-riscv = { version = "0.7", features=["inline-asm"] }
-
-[patch.crates-io]
-riscv = { git = "https://github.com/rust-embedded/riscv", rev = "396fb9b"}
+riscv = { version = "0.8" }
