updating CI to **not** trigger code checks for book updates

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,6 +8,7 @@ on:
     branches: [main]
     paths-ignore:
       - "book/"
+      - "book/**"
 
 jobs:
   # To avoid uploading the Docker image to a registry yet
