--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -19,7 +19,7 @@ native = ["esp-idf-sys/native"]
 [dependencies]
 esp-idf-svc = "=0.42.1"
 esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp32-c3-dkc02-bsc = { path = "../../../common/lib/esp32-c3-dkc02-bsc" }
+esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
 embedded-svc = "=0.22"
 anyhow = "1.0"
 toml-cfg = "0.1"
