rm exercise solution folders

--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -19,7 +19,7 @@ native = ["esp-idf-sys/native"]
 [dependencies]
 esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
 esp-idf-svc = "=0.42.1"
-esp32-c3-dkc02-bsc = { path = "../../../common/lib/esp32-c3-dkc02-bsc" }
+esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
 esp32c3 = "=0.4"
 embedded-svc = "=0.22"
 anyhow = "1.0"
