--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -19,7 +19,7 @@ native = ["esp-idf-sys/native"]
 [dependencies]
 esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
 anyhow = "1"
-esp32-c3-dkc02-bsc = { path = "../../../common/lib/esp32-c3-dkc02-bsc" }
+esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
 
 [build-dependencies]
 embuild = "0.28"
