--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,9 +1,8 @@
 ---
 name: Docker Image
 
-on:
-  push:
-    branches: [main, update_ci]
+on: 
+  push: {}
   pull_request:
     branches: [main]
     paths-ignore:
