--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,8 @@ FROM debian:bullseye-slim
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
-ARG NIGHTLY_VERSION=nightly-2022-03-10
+ARG NIGHTLY_VERSION=1.67.0-nightly
+
 ARG ESP_IDF_VERSION=v4.4.1
 ARG ESP_BOARD=esp32c3
 
