revert: ⏪️ Remove Wokwi changes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,14 +26,7 @@
     "vadimcn.vscode-lldb",
     "serayuzgur.crates",
     "mutantdino.resourcemonitor",
-    "yzhang.markdown-all-in-one",
-    "webfreak.debug",
-    "actboy168.tasks"
-  ],
-  "forwardPorts": [
-    9012,
-    9333,
-    8000
+    "yzhang.markdown-all-in-one"
   ],
   "remoteUser": "root",
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
