--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,9 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
- - name: Setup environment variables for ESP-IDF
-   command: |
-     source /home/gitpod/.espressif/frameworks/esp-idf/export.sh > /dev/null 2>&1
+  - name: Setup environment variables for ESP-IDF
+    command: |
+      source /home/gitpod/.espressif/frameworks/esp-idf-v4.4/export.sh > /dev/null 2>&1
 vscode:
   extensions:
     - matklad.rust-analyzer
@@ -16,8 +16,3 @@ vscode:
 ports:
   - port: 9012
     visibility: public
-  - port: 9333
-    visibility: public
-  - port: 8000
-    visibility: public
-    onOpen: open-browser
